--- a/index.html
+++ b/index.html
@@ -9,8 +9,11 @@
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     <script src="https://js.paystack.co/v1/inline.js"></script>
     <script>
-      // Shim process for environments that do not natively provide it (like standard Vercel static sites)
-      window.process = window.process || { env: { API_KEY: '' } };
+      // Minimal shim for process.env to prevent crashes in environments without a native process object
+      if (typeof window !== 'undefined') {
+        window.process = window.process || {};
+        window.process.env = window.process.env || {};
+      }
       
       tailwind.config = {
         theme: {
@@ -85,7 +88,6 @@
 </head>
   <body>
     <div id="root"></div>
-    <!-- Explicit module import ensures execution in standard ES-aware environments -->
     <script type="module" src="index.tsx"></script>
   </body>
 </html>
