fix: Implement print functionality and refine integration types
This commit introduces a print-friendly view for the Analytics page, allowing users to export reports as PDFs. It also enhances the type definitions for integrations to include more granular status information and specific provider configurations. Additionally, the AI prompt for generating insights has been improved with stricter formatting rules to ensure cleaner output.

--- a/index.html
+++ b/index.html
@@ -69,6 +69,32 @@
       .animate-wave {
         animation: wave 1s ease-in-out infinite;
       }
+
+      /* Print Optimization */
+      @media print {
+        aside, header, .no-print, button {
+          display: none !important;
+        }
+        main {
+          padding: 0 !important;
+          margin: 0 !important;
+          width: 100% !important;
+          background: white !important;
+        }
+        body {
+          background: white !important;
+        }
+        .max-w-7xl {
+          max-width: none !important;
+        }
+        .shadow-lg, .shadow-xl, .shadow-2xl, .shadow-3xl {
+          box-shadow: none !important;
+          border: 1px solid #e2e8f0 !important;
+        }
+        .bg-slate-50\/20, .bg-emerald-50\/20 {
+          background-color: transparent !important;
+        }
+      }
     </style>
   <script type="importmap">
 {
